--- a/wk1/Burroughs_Otto_PWA2/admin.html
+++ b/wk1/Burroughs_Otto_PWA2/admin.html
@@ -15,7 +15,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	
-	<title>Fitness Management | Welcome</title>
+	<title>Fitness Management | Admin Dashboard</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 	
@@ -30,9 +30,8 @@
 
 <body>
 
- <div id="container">
 
-	
+	<div id="container">
 	<nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
@@ -41,22 +40,14 @@
 			<li><a href="register.html">login</a></li>
 		</ul>
 	</nav>
-       
-		<div class="logo"><img src="images/logo.png" title="Get Fit"></div>
-    <!--<div class="mainbkg"><img src="images/bkg1.jpg" title=" "></div>-->
+		
+		
+		
+		
+    
+    <div>
 
 
-<!--Login Button -->
-<div class="login">	   
-	<div class="login_button"><img src="images/login_button.png" title=" "></div>
-</div>
-
-<!-- Registration Buttton-->
-<div class="registration">
-	<div class="reg_button"><img src="images/reg_button.jpg" title=" "></div>
-</div>
-
- <div>
 	<!-- jquery -->
 	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -80,6 +71,7 @@
 		</ul>
 	</footer>
 </html>
+
 
 
 
