--- a/wk1/Burroughs_Otto_PWA2/register.html
+++ b/wk1/Burroughs_Otto_PWA2/register.html
@@ -15,7 +15,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	
-	<title>Fitness Management | Welcome</title>
+	<title>Fitness Management | Registration</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 	
@@ -30,33 +30,40 @@
 
 <body>
 
- <div id="container">
-
-	
+	<div id="container">
 	<nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="register.html">Register</a></li>
 			<li><a href="admin.html">Admin</a></li>
-			<li><a href="register.html">login</a></li>
+			<li><a href="login.html">login</a></li>
 		</ul>
 	</nav>
-       
-		<div class="logo"><img src="images/logo.png" title="Get Fit"></div>
-    <!--<div class="mainbkg"><img src="images/bkg1.jpg" title=" "></div>-->
+
+	<div class="logo"><img src="images/logo.png" title="Get Fit"></div>
+
+		<div class="form">
+
+	<div class="twitter"><img src="images/twitter.png" title="register 
+	with twitter"></div>
+	
+	<div class="facebook"><img src="images/facebook.png" title="register with facebook"></div>
+	
+	<img src="images/forminputs.png" title="complete he form">
 
 
-<!--Login Button -->
-<div class="login">	   
-	<div class="login_button"><img src="images/login_button.png" title=" "></div>
-</div>
 
-<!-- Registration Buttton-->
-<div class="registration">
-	<div class="reg_button"><img src="images/reg_button.jpg" title=" "></div>
-</div>
 
- <div>
+
+
+
+
+		</div>
+
+    
+    <div>
+
+
 	<!-- jquery -->
 	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -80,6 +87,7 @@
 		</ul>
 	</footer>
 </html>
+
 
 
 
