Edits for submission
Added login form, registration form. NO styling yet as there is a error
with nag and CDN, i will debug and update accordignaly

--- a/wk1/Burroughs_Otto_PWA2/admin.html
+++ b/wk1/Burroughs_Otto_PWA2/admin.html
@@ -27,24 +27,36 @@
 	<!-- end CSS-->
 	
 </head>
+<header>
 
+	<div class="adminlogo"><img src="images/admin_logo.png" title="Fitness Management LLC,"></div>
+	<div class="smalllogo"><img src="images/smlogo.png" title="Fitness Management LLC,"></div>
+
+</header>
 <body>
 
 
 	<div id="container">
-	<nav>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="register.html">Register</a></li>
-			<li><a href="admin.html">Admin</a></li>
-			<li><a href="register.html">login</a></li>
-		</ul>
-	</nav>
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<!--<li><a href="register.html">Register</a></li>-->
+				<!--<li><a href="admin.html">Admin</a></li>-->
+				<li><a href="index.html">Logout</a></li>
+			</ul>
+		</nav>
+		<div class="adminui"></div>
+		<div class="adminnav">
+			<ul>
+				<li><a href=" ">Nutrition</a></li>
+				<li><a href=" ">Activities</a></li>
+				<li><a href=" ">Goals</a></li>
+				<li><a href=" ">Progress</a></li>
+			</ul>
+
+		</div>
 		
-		
-		
-		
-    
+	    
     <div>
 
 
