--- a/wk1/Burroughs_Otto_PWA2/index.html
+++ b/wk1/Burroughs_Otto_PWA2/index.html
@@ -38,7 +38,7 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="register.html">Register</a></li>
 			<li><a href="admin.html">Admin</a></li>
-			<li><a href="register.html">login</a></li>
+			<li><a href="login.html">login</a></li>
 		</ul>
 	</nav>
        
