--- a/wk1/Burroughs_Otto_PWA2/login.html
+++ b/wk1/Burroughs_Otto_PWA2/login.html
@@ -24,24 +24,42 @@
 	
 	<!-- CSS concatenated and minified via ant build script-->
 	<link rel="stylesheet" href="css/style.css?v=1">
+	<!--<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css">-->
 	<!-- end CSS-->
 	
 </head>
 
 <body>
 
-	<div id="container">
-	<nav>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="register.html">Register</a></li>
-			<li><a href="admin.html">Admin</a></li>
-			<li><a href="register.html">login</a></li>
-		</ul>
-	</nav>
+    <div id="container">
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="register.html">Register</a></li>
+				<!--<li><a href="admin.html">Admin</a></li>-->
+				<!--<li><a href="register.html">login</a></li>-->
+			</ul>
+		</nav>
 
-		<div id="logo"></div
-    
+		<div class="logo"><img src="images/logo.png"></div>
+
+		<div class="form">
+			<form class="pure-form">
+			    <fieldset>
+			        <legend>A compact inline form</legend>
+
+			        <input type="email" placeholder="Email">
+			        <input type="password" placeholder="Password">
+
+			        <label for="remember">
+			            <input id="remember" type="checkbox"> Remember me
+			        </label>
+
+			        <button type="submit" class="pure-button pure-button-primary">Sign in</button>
+			    </fieldset>
+			</form>
+		</div>
+
     <div>
 
 
@@ -55,6 +73,7 @@
 	
 	<!-- main -->
 	<script type="text/javascript" src="js/main.js"></script>
+
   
 </body>
 	<footer>
