--- a/wk1/Burroughs_Otto_PWA2/register.html
+++ b/wk1/Burroughs_Otto_PWA2/register.html
@@ -24,6 +24,7 @@
 	
 	<!-- CSS concatenated and minified via ant build script-->
 	<link rel="stylesheet" href="css/style.css?v=1">
+	<!--<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css">-->
 	<!-- end CSS-->
 	
 </head>
@@ -44,6 +45,58 @@
 
 		<div class="form">
 
+
+		<form class="pure-form pure-form-stacked">
+    <fieldset>
+        <legend>Complete the registration form below</legend>
+
+        <div class="pure-g">
+            <div class="pure-u-1 pure-u-med-1-3">
+                <label for="first-name">First Name</label>
+                <input id="first-name" type="text">
+            </div>
+
+            <div class="pure-u-1 pure-u-med-1-3">
+                <label for="last-name">Last Name</label>
+                <input id="last-name" type="text">
+            </div>
+
+            <div class="pure-u-1 pure-u-med-1-3">
+                <label for="email">E-Mail</label>
+                <input id="email" type="email" required>
+            </div>
+
+            <div class="pure-u-1 pure-u-med-1-3">
+                <label for="city">City</label>
+                <input id="city" type="text">
+            </div>
+
+            <div class="pure-u-1 pure-u-med-1-3">
+                <label for="state">State</label>
+                <select id="state" class="pure-input-1-2">
+                    <option>AL</option>
+                    <option>CA</option>
+                    <option>IL</option>
+                </select>
+            </div>
+        </div>
+
+        <label for="terms" class="pure-checkbox">
+            <input id="terms" type="checkbox"> I've read the terms and conditions
+        </label>
+
+        <button type="submit" class="pure-button pure-button-primary">Submit</button>
+    </fieldset>
+</form>
+
+
+		</div>
+
+
+
+
+
+<!--
 	<div class="twitter"><img src="images/twitter.png" title="register 
 	with twitter"></div>
 	
@@ -52,16 +105,9 @@
 	<img src="images/forminputs.png" title="complete he form">
 
 
-
-
-
-
-
-
+-->
 		</div>
-
-    
-    <div>
+   <div>
 
 
 	<!-- jquery -->
