--- a/wk1/Burroughs_Otto_PWA2/index.html
+++ b/wk1/Burroughs_Otto_PWA2/index.html
@@ -45,6 +45,8 @@
 		<div class="logo"><img src="images/logo.png" title="Get Fit"></div>
     <!--<div class="mainbkg"><img src="images/bkg1.jpg" title=" "></div>-->
 
+<!--Tag Line -->
+<div class="tagline"><p>Monitor your diet, track your progress with workouts &<br>achieiveyour fitness goals. </p></div>
 
 <!--Login Button -->
 <div class="login">	   
