--- a/wk1/Burroughs_Otto_PWA2/index.html
+++ b/wk1/Burroughs_Otto_PWA2/index.html
@@ -12,6 +12,7 @@
 <html lang="en">
 <head>
 
+
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	
@@ -22,14 +23,15 @@
 	<!--  Mobile viewport optimized: j.mp/bplateviewport -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<!-- CSS concatenated and minified via ant build script-->
+	<!-- CSS concatenated and minified via ant build script -->
 	<link rel="stylesheet" href="css/style.css?v=1">
+
 	<!-- end CSS-->
 	
 </head>
 
 <body>
-
+<!--<body background="https://www.google.com/images/srpr/logo11w.png">-->
  <div id="container">
 
 	
@@ -46,7 +48,7 @@
     <!--<div class="mainbkg"><img src="images/bkg1.jpg" title=" "></div>-->
 
 <!--Tag Line -->
-<div class="tagline"><p>Monitor your diet, track your progress with workouts &<br>achieiveyour fitness goals. </p></div>
+<div class="tagline"><p>Monitor your diet, track your progress with workouts &amp;<br>achieive your fitness goals. </p></div>
 
 <!--Login Button -->
 <div class="login">	   
@@ -60,16 +62,22 @@
 
  <div>
 	<!-- jquery -->
-	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="js/application.js"></script>
+	<script type="url" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script type="text/javascript" src="js/jquery/j11104.js"></script>
+
 	
 	<!-- plugins -->
-
+ 	
+    
+    
 	
 	<!-- main -->
 	<script type="text/javascript" src="js/main.js"></script>
-  
+
+
+	
+	  
+
 </body>
 	<footer>
 		<ul>
