--- a/wk1/Burroughs_Otto_PWA2/admin.html
+++ b/wk1/Burroughs_Otto_PWA2/admin.html
@@ -24,6 +24,7 @@
 	
 	<!-- CSS concatenated and minified via ant build script-->
 	<link rel="stylesheet" href="css/style.css?v=1">
+	<link rel="stylesheet" type="text/javascript" href="css/jquery-ui-1.10.4.custom.min.css">
 	<!-- end CSS-->
 	
 </head>
@@ -59,13 +60,15 @@
 	    
     <div>
 
-
 	<!-- jquery -->
-	
+	<script type="url" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script type="text/javascript" src="js/jquery/j11104.js"></script>
+	<script type="text/javascript" src="js/jquery-ui-1.10.4.custom.min.js"></script>
+
 	
 	<!-- plugins -->
-
-	
+ 	
+    
 	<!-- main -->
 	<script type="text/javascript" src="js/main.js"></script>
   
