jquery ui widget
configuring admin section for jquery ui

--- a/wk2/Burroughs_Otto_PWA2/admin.html
+++ b/wk2/Burroughs_Otto_PWA2/admin.html
@@ -56,7 +56,67 @@
 			</ul>
 
 		</div>
-		
+		<div id="ui-examples">
+			<div class="example accordian">
+				<div id="group-of-seven">
+					<h1>First Item</h1>
+					<div>
+						<p>
+							more info on first item to be shown in admin area selection.
+						</p>
+							<a href="#step2" id="acc-skip2"> Next >></a>
+					</div>
+
+					<h1>Second Item</h1>
+					<div>
+						<p>
+							more info on Second item to be shown in admin area selection.
+						</p>
+							<a href="#step2" id="acc-skip2"> Next >></a>
+					</div>
+
+					<h1>Third Item</h1>
+					<div>
+						<p>
+							more info on third item to be shown in admin area selection.
+						</p>
+							<a href="#step2" id="acc-skip2"> Next >></a>
+					</div>
+					<h1>Fourth Item</h1>
+					<div>
+						<p>
+							more info on fourth item to be shown in admin area selection.
+						</p>
+							<a href="#step2" id="acc-skip2"> Next >></a>
+					</div>
+
+					<h1>Fifth Item</h1>
+					<div>
+						<p>
+							more info on fifth item to be shown in admin area selection.
+						</p>
+							<a href="#step2" id="acc-skip2"> Next >></a>
+					</div>
+
+					<h1>Six Item</h1>
+					<div>
+						<p>
+							more info on six item to be shown in admin area selection.
+						</p>
+							<a href="#step2" id="acc-skip2"> Next >></a>
+					</div>
+					<h1>Seventh Item</h1>
+					<div>
+						<p>
+							more info on seventh item to be shown in admin area selection.
+						</p>
+							<a href="#step2" id="acc-skip2"> Next >></a>
+					</div>
+
+				</div>
+			</div>
+
+		</div>
 	    
     <div>
 
@@ -64,6 +124,7 @@
 	<!-- jquery -->
 	<script type="url" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery/j11104.js"></script>
+	<script type="text/javascript" src="js/jquery-ui-1.10.4.custom.min.js"></script>
 
 	
 	<!-- plugins -->
