--- a/wk2/Burroughs_Otto_PWA2/admin.html
+++ b/wk2/Burroughs_Otto_PWA2/admin.html
@@ -30,94 +30,81 @@
 </head>
 <header>
 
-	<div class="adminlogo"><img src="images/admin_logo.png" title="Fitness Management LLC,"></div>
-	<div class="smalllogo"><img src="images/smlogo.png" title="Fitness Management LLC,"></div>
+	<!--<div class="adminlogo"><a href="index.html"><img src="images/admin_logo.png" title="Fitness Management LLC,"></a></div>-->
+	<div class="smalllogo"><a href="index.html"><img src="images/smlogo.png" title="Fitness Management LLC,"></a></div>
 
 </header>
 <body>
 
 
 	<div id="container">
-		<nav>
+		<!--<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<!--<li><a href="register.html">Register</a></li>-->
-				<!--<li><a href="admin.html">Admin</a></li>-->
+				<li><a href="register.html">Register</a></li>
+				<li><a href="admin.html">Admin</a></li>
 				<li><a href="index.html">Logout</a></li>
 			</ul>
-		</nav>
+		</nav>-->
 		<div class="adminui"></div>
 		<div class="adminnav">
 			<ul>
-				<li><a href=" ">Nutrition</a></li>
-				<li><a href=" ">Activities</a></li>
-				<li><a href=" ">Goals</a></li>
-				<li><a href=" ">Progress</a></li>
+				<li><a id="nutrition">Nutrition</a></li>
+				<li><a id="activities">Activities</a></li>
+				<li><a id="goals">Goals</a></li>
+				<li><a id="progress">Progress</a></li>
+				<li><a href="index.html">Logout</a></li>
 			</ul>
-
-		</div>
-		<div id="ui-examples">
-			<div class="example accordian">
-				<div id="group-of-seven">
-					<h1>First Item</h1>
+			<div id="accordintable">
+			 <div class="exampleaccordian">
+				<div id="group-of-five">
+					<h1>Breakfast | 1st meal</h1>
 					<div>
 						<p>
-							more info on first item to be shown in admin area selection.
+							1/2 whole wheat bagel, 1 Tbsp. whipped cream cheese,
+							2oz. smoked salmon (lox), 2 slices tomato and 1/2 grapefruit. Toast half of the bagel and add toppings. <b>291 cal</b> | <b>23 gr protien</b>
 						</p>
-							<a href="#step2" id="acc-skip2"> Next >></a>
+							<a href="#step1" id="acc-skip2"> Next >></a>
 					</div>
 
-					<h1>Second Item</h1>
+					<h1>Mid-Morning Snack | 2nd meal</h1>
 					<div>
 						<p>
-							more info on Second item to be shown in admin area selection.
+							2 slices of whole wheat bread, 3 slices of turkey bacon, Sliced tomato, to taste Lettucec, to taste 1 fresh pear. Make a sandwhich of the above items and eat with pear. <b>297 calories</b> | <b> 26g protien</b>
 						</p>
-							<a href="#step2" id="acc-skip2"> Next >></a>
+							<a href="#step2" id="acc-skip3"> Next >></a>
 					</div>
 
-					<h1>Third Item</h1>
+					<h1>Lunch | 3rd meal</h1>
 					<div>
 						<p>
-							more info on third item to be shown in admin area selection.
+							4oz. lean roast beef, 1/2 6in whole wheat pita pocket, sliced cherry tomatoes, romaine lettuce, dark salad greens, sliced cucumbers, sliced mushrooms. Pile all this yummy items int the pocket and serve with side of salad, cucmubers and mushrooms, dressed with a fresh squee of lemon juice. <b>297 calories</b> | <b> 26g protien</b>
 						</p>
-							<a href="#step2" id="acc-skip2"> Next >></a>
+							<a href="#step3" id="acc-skip4"> Next >></a>
 					</div>
-					<h1>Fourth Item</h1>
+					<h1>Afternoon Snack | 4th meal</h1>
 					<div>
 						<p>
-							more info on fourth item to be shown in admin area selection.
+							3oz (about 6 pieces) of sashimi, 1/2 cup brown rice, steamed. Side of salad of mixed greens, 2 tbsp. Asian ginger dressing. Have any varity of sashimi with a side of rice, and a side of mixed greens topped with Asian dressing. <b>319 calories</b> | <b> 24gr protien</b>
 						</p>
-							<a href="#step2" id="acc-skip2"> Next >></a>
-					</div>
-
-					<h1>Fifth Item</h1>
-					<div>
-						<p>
-							more info on fifth item to be shown in admin area selection.
-						</p>
-							<a href="#step2" id="acc-skip2"> Next >></a>
+							<a href="#step4" id="acc-skip5"> Next >></a>
 					</div>
 
-					<h1>Six Item</h1>
+					<h1>Dinner | 5th meal</h1>
 					<div>
 						<p>
-							more info on six item to be shown in admin area selection.
+							3 to 4 oz. flank steak, filet mignon, or sirloin. Olive oil, Sea salt and pepper to taste, 1 small baked potato, dijon mustard, 1 cup steam broccoli, Lemon juice to taste. Brush steak with olive oil and sprinkle with sea salt and freshly ground pepper. Grill or broil steak on both sides for 5-7 min, or until degree of doneness is achieved. Serve steak with small baked potato topped with country dijon mustard and steamed broccoli topped with fresh lemon juice.<b>304 calories</b> | <b> 30gr protien</b>
 						</p>
-							<a href="#step2" id="acc-skip2"> Next >></a>
+							<a href="#step5" id="acc-skip6"> Back to 1st meal >></a>
 					</div>
-					<h1>Seventh Item</h1>
-					<div>
-						<p>
-							more info on seventh item to be shown in admin area selection.
-						</p>
-							<a href="#step2" id="acc-skip2"> Next >></a>
-					</div>
-
 				</div>
+				
 			</div>
 
 		</div>
-	    
+
+		</div>
+		
     <div>
 
 
