--- a/wk2/Burroughs_Otto_PWA2/index.html
+++ b/wk2/Burroughs_Otto_PWA2/index.html
@@ -29,12 +29,12 @@
 	<!-- end CSS-->
 	
 </head>
-
+<div class="smalllogo"><a href="index.html"><img src="images/smlogo.png" title="Fitness Management LLC,"></a></div>
 <body>
 <!--<body background="https://www.google.com/images/srpr/logo11w.png">-->
  <div id="container">
 
-	
+	<!--
 	<nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
@@ -43,27 +43,86 @@
 			<li><a href="login.html">login</a></li>
 		</ul>
 	</nav>
-       
-		<div class="logo"><img src="images/logo.png" title="Get Fit"></div>
-    <!--<div class="mainbkg"><img src="images/bkg1.jpg" title=" "></div>-->
+       -->
 
-<!--Tag Line -->
-<div class="tagline"><p>Monitor your diet, track your progress with workouts &amp;<br>achieive your fitness goals. </p></div>
+       <!-- Jquery naviagtion with images -->
+       <div class="navbox">
+		       <ul id="sdt_menu" class="sdt_menu">
+					 <li>
+						  <a href="index.html">
+						   <img src="images/1.jpg" alt="testing hom"/>
+						   <span class="sdt_active"></span>
+						   <span class="sdt_wrap">
+						    <span class="sdt_link">Home</span>
+						    <span class="sdt_descr"></span>
+						   </span>
+						  </a>
+						  <!--<div class="sdt_box">
+							   <a href="#">About Us</a>
+							   <a href="#">Success Stories</a>
+							   <a href="#">Legal</a>
+						  </div>-->
+					 </li>
+				</ul>
+				<ul id="sdt_menu" class="sdt_menu">
+					 <li>
+						  <a href="register.html">
+						   <img src="images/2.jpg" alt="testing register"/>
+						   <span class="sdt_active"></span>
+						   <span class="sdt_wrap">
+						    <span class="sdt_link">Register</span>
+						    <span class="sdt_descr">Become a member</span>
+						   </span>
+						  </a>
+						  <div class="sdt_box">
+							   <a href="#">View Charts</a>
+							   <a href="#">Track progress</a>
+							   <a href="#">Social Network</a>
+						  </div>
+					 </li>
+				</ul>
+				<ul id="sdt_menu" class="sdt_menu">
+					 <li>
+						  <a href="admin.html">
+						   <img src="images/4.jpg" alt="testing admin"/>
+						   <span class="sdt_active"></span>
+						   <span class="sdt_wrap">
+						    <span class="sdt_link">Admin</span>
+						    <span class="sdt_descr">Management tools</span>
+						   </span>
+						  </a>
+						  <div class="sdt_box">
+							   <a href="#">Diet</a>
+							   <a href="#">Workouts</a>
+							   <a href="#">Tips &amp; Tricks</a>
+						  </div>
+					 </li>
+				</ul>
 
-<!--Login Button -->
-<div class="login">	   
-	<div class="login_button"><img src="images/login_button.png" title=" "></div>
-</div>
+		</div>
 
-<!-- Registration Buttton-->
-<div class="registration">
-	<div class="reg_button"><img src="images/reg_button.jpg" title=" "></div>
-</div>
+
+		<!-- Main logos -->
+		<!--<div class="logo"><img src="images/logo.png" title="Get Fit"></div>-->
+    
+
+	<!--Tag Line -->
+	<div id="mainCTA">
+		<div class="tagline"><p>Monitor your diet, track your progress with workouts &amp;<br>achieive your fitness goals.</p>
+		</div>
+		<div class="mainpara">
+			<p> Our mission is simple! Track all of your fitness data and guide you to your goals. Personalize the app with your day to day tasks; such: Diet, Workouts and health stats. Log in your  diet and it will track your caloric intake and notify if your outside the intake range. Log your workouts for one week and it will analyize the best workouts for you based on your goals. Powerfull enough for bodybuilders yet simple enough for the soccer moms or Little league Dad's. <div class="tagline">Create a account now!</div>
+			</p>
+		</div>
+	</div>
+
+
 
  <div>
 	<!-- jquery -->
 	<script type="url" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery/j11104.js"></script>
+	<script type="text/javascript" src="js/jquery/jQuery.easing.1.3.js"></script>
 
 	
 	<!-- plugins -->
