--- a/wk2/Burroughs_Otto_PWA2/login.html
+++ b/wk2/Burroughs_Otto_PWA2/login.html
@@ -32,38 +32,152 @@
 <body>
 
     <div id="container">
-		<nav>
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="register.html">Register</a></li>
-				<!--<li><a href="admin.html">Admin</a></li>-->
-				<!--<li><a href="register.html">login</a></li>-->
-			</ul>
-		</nav>
+		<div id="navbox">
+		       <ul id="sdt_menu" class="sdt_menu">
+					 <li>
+						  <a href="index.html">
+						   <img src="images/1.jpg" alt="testing hom"/>
+						   <span class="sdt_active"></span>
+						   <span class="sdt_wrap">
+						    <span class="sdt_link">Home</span>
+						    <span class="sdt_descr"></span>
+						   </span>
+						  </a>
+						  <div class="sdt_box">
+							   <a href="#">About Us</a>
+							   <a href="#">Success Stories</a>
+							   <a href="#">Legal</a>
+						  </div>
+					 </li>
+				</ul>
+				<ul id="sdt_menu" class="sdt_menu">
+					 <li>
+						  <a href="register.html">
+						   <img src="images/2.jpg" alt="testing register"/>
+						   <span class="sdt_active"></span>
+						   <span class="sdt_wrap">
+						    <span class="sdt_link">Register</span>
+						    <span class="sdt_descr">Become a member</span>
+						   </span>
+						  </a>
+						  <div class="sdt_box">
+							   <a href="#">Members only</a>
+							   <a href="#">Track your progress</a>
+							   <a href="#">Connect with others</a>
+						  </div>
+					 </li>
+				</ul>
+				<ul id="sdt_menu" class="sdt_menu">
+					 <li>
+						  <a href="admin.html">
+						   <img src="images/2.jpg" alt="testing admin"/>
+						   <span class="sdt_active"></span>
+						   <span class="sdt_wrap">
+						    <span class="sdt_link">Admin</span>
+						    <span class="sdt_descr">Management tools</span>
+						   </span>
+						  </a>
+						  <div class="sdt_box">
+							   <a href="#">Diet</a>
+							   <a href="#">Workouts</a>
+							   <a href="#">Tips &amp; Tricks</a>
+						  </div>
+					 </li>
+				</ul>
+
+		</div>
 
 		<div class="logo"><img src="images/logo.png"></div>
 
-		<div class="form">
-			<form class="pure-form">
-			    <fieldset>
-			        <legend>A compact inline form</legend>
-
-			        <input type="email" placeholder="Email">
-			        <input type="password" placeholder="Password">
-
-			        <label for="remember">
-			            <input id="remember" type="checkbox"> Remember me
-			        </label>
-
-			        <button type="submit" class="pure-button pure-button-primary">Sign in</button>
-			    </fieldset>
-			</form>
-		</div>
+		<div id="form_wrapper" class="form_wrapper">
+					<form class="register active">
+						<h3>Register</h3>
+						<div class="column">
+							<div>
+								<label>First Name:</label>
+								<input type="text" />
+								<span class="error">This is an error</span>
+							</div>
+							<div>
+								<label>Last Name:</label>
+								<input type="text" />
+								<span class="error">This is an error</span>
+							</div>
+							<div>
+								<label>Website:</label>
+								<input type="text" value="http://"/>
+								<span class="error">This is an error</span>
+							</div>
+						</div>
+						<div class="column">
+							<div>
+								<label>Username:</label>
+								<input type="text"/>
+								<span class="error">This is an error</span>
+							</div>
+							<div>
+								<label>Email:</label>
+								<input type="text" />
+								<span class="error">This is an error</span>
+							</div>
+							<div>
+								<label>Password:</label>
+								<input type="password" />
+								<span class="error">This is an error</span>
+							</div>
+						</div>
+						<div class="bottom">
+							<div class="remember">
+								<input type="checkbox" />
+								<span>Send me updates</span>
+							</div>
+							<input type="submit" value="Register" />
+							<a href="index.html" rel="login" class="linkform">You have an account already? Log in here</a>
+							<div class="clear"></div>
+						</div>
+					</form>
+					<form class="login">
+						<h3>Login</h3>
+						<div>
+							<label>Username:</label>
+							<input type="text" />
+							<span class="error">This is an error</span>
+						</div>
+						<div>
+							<label>Password: <a href="forgot_password.html" rel="forgot_password" class="forgot linkform">Forgot your password?</a></label>
+							<input type="password" />
+							<span class="error">This is an error</span>
+						</div>
+						<div class="bottom">
+							<div class="remember"><input type="checkbox" /><span>Keep me logged in</span></div>
+							<input type="submit" value="Login"></input>
+							<a href="register.html" rel="register" class="linkform">You don't have an account yet? Register here</a>
+							<div class="clear"></div>
+						</div>
+					</form>
+					<form class="forgot_password">
+						<h3>Forgot Password</h3>
+						<div>
+							<label>Username or Email:</label>
+							<input type="text" />
+							<span class="error">This is an error</span>
+						</div>
+						<div class="bottom">
+							<input type="submit" value="Send reminder"></input>
+							<a href="index.html" rel="login" class="linkform">Suddenly remebered? Log in here</a>
+							<a href="register.html" rel="register" class="linkform">You don't have an account? Register here</a>
+							<div class="clear"></div>
+						</div>
+					</form>
+				</div>
 
     <div>
 
 
 	<!-- jquery -->
+	<script type="url" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script type="text/javascript" src="js/jquery/j11104.js"></script>
+	<script type="text/javascript" src="js/jquery/jQuery.easing.1.3.js"></script>
 	
 	
 	<!-- plugins -->
