--- a/wk2/Burroughs_Otto_PWA2/login.html
+++ b/wk2/Burroughs_Otto_PWA2/login.html
@@ -28,6 +28,13 @@
 	<!-- end CSS-->
 	
 </head>
+	<header>
+
+		<div class="smalllogo"><a href="index.html"><img src="images/smlogo.png" title="Fitness Management LLC,"></a></div>
+
+
+	</header>
+<body>
 
 <body>
 
@@ -87,7 +94,7 @@
 
 		</div>
 
-		<div class="logo"><img src="images/logo.png"></div>
+		<!--<div class="logo"><img src="images/logo.png"></div>-->
 
 		<div id="form_wrapper" class="form_wrapper">
 					<form class="register active">
