--- a/wk2/Burroughs_Otto_PWA2/register.html
+++ b/wk2/Burroughs_Otto_PWA2/register.html
@@ -91,10 +91,11 @@
 				</ul>
 
 		</div>
+		
 
 		<div class="content">
 				<div id="form_wrapper" class="form_wrapper">
-					<form class="register">
+					<form class="register active">
 						<h3>Register</h3>
 						<div class="column">
 							<div>
@@ -140,7 +141,7 @@
 							<div class="clear"></div>
 						</div>
 					</form>
-					<form class="login active">
+					<form class="login">
 						<h3>Login</h3>
 						<div>
 							<label>Username:</label>
@@ -172,7 +173,8 @@
 							<a href="register.html" rel="register" class="linkform">You don't have an account? Register here</a>
 							<div class="clear"></div>
 						</div>
-				</form>
+					</form>
+				</div>
 		</div>
 	<div class="clear"></div>
 </div>
